cmake_minimum_required(VERSION 3.23)
set(CMAKE_CXX_STANDARD 23)
project(SteamidPP VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
if (MSVC)
    add_compile_options(/W4 /WX)
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2")
else()
    add_compile_options(-Wall -Wextra -Wno-unused-parameter -Werror)
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
endif()

add_library(SteamidPP STATIC include/SteamID.hpp)
target_include_directories(SteamidPP PUBLIC include)
set_target_properties(SteamidPP PROPERTIES LINKER_LANGUAGE CXX)

enable_testing()
add_executable(tester test.cpp)
add_test(NAME SteamidPPTest COMMAND tester)
